# DIFS

./: .gitattributes  .gitignore  .gitignore~  .stignore  .~lock.documentation.odt#  CMakeLists.txt  CMakeLists_bkUp_v2.txt  README.md  auto_wrap_aws.sh  codebase_tree.md  codebase_tree.md~  download_supported_model.py~  dump_codebase_v2.sh  error_snapshots_pnb.txt  my_notes.md  my_notes.md~  rebuild_all_v1.sh  rebuild_all_v2.sh  rebuild_all_v2.sh~  rebuild_all_v3.sh  rebuild_all_v3.sh~  rebuild_all_v4.sh  rebuild_all_v5.sh  rebuild_all_v6.sh  rebuild_all_v7.sh  rebuild_all_v8.sh  rebuild_all_v9.sh  rebuild_all_v9_fast.sh  rebuild_all_v9_fast.sh~  start_infaas.sh  start_infaas_v1.sh  start_infaas_v2.sh  start_infaas_v3.sh  start_infaas_v4.sh  stop_infaas_v1.sh  stop_infaas_v2.sh  stop_infaas_v3.sh  stop_infaas_v3.sh~  temp_errors_corrections_script.sh  temp_errors_corrections_script.sh~
.stfolder/: syncthing-folder-4e515d.txt
DiffServ_0112_1730_coco2/: .~lock.StableDiffusion추론모듈_20260115_V1.0_GoogleTranslated.docx#  StableDiffusion추론모듈_20260115_V1.0_GoogleTranslated.docx
DiffServ_0112_1730_coco2/0112_1730_coco/: CMakeLists.txt  CMakeLists_heartbeat.txt  Dockerfile_async_v2  TAGS  address_port.json  copy_model_and_stats.sh  models.json  monitor_system.sh  readme.txt  requirements.txt  run_multiple_workers.sh  samplers.json
DiffServ_0112_1730_coco2/0112_1730_coco/metrics/: client_metrics.csv  server_metrics.csv
DiffServ_0112_1730_coco2/0112_1730_coco/protos/: query.proto  query_pb2.py  query_pb2_grpc.py
DiffServ_0112_1730_coco2/0112_1730_coco/src/: Dockerfile.diffusion  autoscaler.py  calc_fid_v3.py  client.cc  client.py  client_async.py  client_async_v2.py  client_async_v3.py  client_h.py  coco_prompt.py  config.py  cvt_format.py  diffserv_scheduler.py  diffserv_scheduler.py~  heartbeat_client.cc  infaas_request_status.pb.cc  infaas_request_status_pb2.py  infaas_request_status_pb2_grpc.py  metrics.py  model_registry.py  plot_metrics.py  pytorch_container_diffusion_async_v2.py  query_pb2.py  query_pb2_grpc.py  scheduler.py  scheduler.py~  scheduler_bkUp.py  server.py  server.py~  server.sync-conflict-20260522-100157-AYWBFPQ.py  worker_pool.py  worker_pool.py~  workload_classifier.py
DiffServ_0112_1730_coco2/0112_1730_coco/src/1/: Down_Real_image.py  Get_Real_Image7.py  Get_Real_Image7_car.py  calc_fid.py  client_read_prompts.py  client_test.py  client_v2.py  convert_and_save.py  down_save.py  download_modelfile.py  download_modelfile2.py  process_option.py  prompt_list.py  pytorch_container_diffusion.py  pytorch_container_diffusion_async.py  pytorch_container_diffusion_v2.py  pytorch_container_diffusion_v3.py  save_stats2.py  unique_name.py
Templates/INFaaS/: CMakeLists.txt  CMakeLists_bkUp_v3.txt  download_supported_model.py  error_snapshots_pnb.txt  my_notes.md  my_notes.md~  rebuild_all_v1.sh  rebuild_all_v2.sh  rebuild_all_v3.sh  rebuild_all_v4.sh  rebuild_all_v5.sh  rebuild_all_v6.sh  rebuild_all_v7.sh  rebuild_all_v8.sh  shutdown_infaas.sh  shutdown_infaas_bkUp_v1.sh  start_infaas_bkUp_v2.sh  start_local_infaas.sh
Templates/INFaaS/.stfolder/: syncthing-folder-4e515d.txt
Templates/INFaaS/myscripts/: locate_ami.sh~
Templates/INFaaS/protos/: modelreg.proto
Templates/INFaaS/src/master/: #queryfe_server.cc#  .#queryfe_server.cc  CMakeLists.txt  modelreg_server.cc  queryfe_server.cc
Templates/INFaaS/utils/: filesystem_utils.h
dockerfiles/: Dockerfile.diffusion  Dockerfile.diffusion~
error_and_recent_command_logs/: error_snapshots_pnb.txt  most_recent_commands.txt
error_log/: error_snapshots_pnb.txt
include/: constants.h
my_config/: config.yaml
my_security/: INFaaSUser_credentials.csv  infaas_instance1_key1.pem
mymodel_directory/: resnet50_fp32.pt
myscripts/: locate_ami.sh
protos/: CMakeLists.txt  CMakeLists.txt.backUp  infaas_query.proto  infaas_query.proto~  infaas_request_status.proto  modelreg.proto  query.proto
protos/internal/: CMakeLists.txt  CMakeLists_prev.txt  diffusion_service.proto  diffusion_service.proto~  model.proto  model.proto~  query.proto  query.proto_prev_v2
protos/python_protos/: infaas_request_status_pb2.py  infaas_request_status_pb2_grpc.py  infaas_request_status_pb2_grpc.sync-conflict-20260131-213525-KYXKDLF.py  query_pb2.py  query_pb2.sync-conflict-20260131-213332-KYXKDLF.py  query_pb2_grpc.py  query_pb2_grpc.sync-conflict-20260131-213646-KYXKDLF.py
scripts/: install_aws_cpp_sdk.sh
src/: CMakeLists.txt
src/cli-tools/: CMakeLists.txt  infaas_modelregistration.cc  infaas_modinfo.cc  infaas_offline_query.cc  infaas_online_query.cc
src/common/: local_paths.h
src/containers/: client.py  client.py~  client_Heesik.py  pytorch_container.py
src/containers/diffusion/: diffusion_service_pb2.py  diffusion_service_pb2_grpc.py  server.py
src/include/: constants.h.templ
src/master/: CMakeLists.txt  CMakeLists_bkUp_v2.txt  master_vm_daemon.cc  modelreg.grpc.pb.cc  modelreg.grpc.pb.h  modelreg.pb.cc  modelreg_server.cc  queryfe_server.cc
src/metadata-store/: redis_md_test.cc  redis_metadata.cc  redis_metadata.h
src/protos/internal/: CMakeLists.txt  CMakeLists.txt~
src/protos/internal/internal/: diffusion_service.grpc.pb.cc  diffusion_service.grpc.pb.h  diffusion_service.pb.cc  diffusion_service.pb.h
src/worker/: #trtis_request.h#  CMakeLists.txt  autoscaler.cc  autoscaler.h  common_local_paths.h  common_model_util.cc  common_model_util.cc.broken  common_model_util.h  common_model_util_prev01.cc  common_model_util_prev02.cc  common_model_util_prev03.cc  common_model_util_trtis.cc  diffusion_service_impl.cc  diffusion_service_impl.cc~  diffusion_service_impl.h  diffusion_service_impl.h~  inferentia_query_test.cc  local_storage_backend.h  local_storage_backend.h~  model_executor.cc  model_executor.cc~  model_executor.h  model_executor.h~  process_executor.cc  process_executor.cc~  process_executor.h  process_executor.h~  query_client.h  query_executor.cc  query_test.cc  storage_backend.h  trtis_request.h  trtis_stubs.h
utils/: filesystem_utils.cpp  local_s3cfg.h  local_s3cfg.h~
(+7 files in other folders)
